[tool.poetry]
name = "objection_engine_rabbit"
version = "0.1.0"
description = ""
authors = ["Luis Mayo Valbuena <luismayovalbuena@outlook.es>"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.2.5"
objection-engine = "^3.2.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
