[tool.poetry]
name = "objection_engine_rabbit"
version = "0.1.0"
description = ""
authors = ["Luis Mayo Valbuena <luismayovalbuena@outlook.es>"]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
jsons="^1.6.3"
munch="^2.5.0"
objection-engine = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
